refactor: melhorando organização do swagger
