# src/routes/index.js
@@ -7,6 +7,9 @@ import pointRouters from './point-router';
 const app = express();
 
 app.get('/', (req, res) => {
+  /* #swagger.description = "Rota de teste da API" */
+  /* #swagger.security = [] */
+  /* #swagger.tags = ["Home"] */
   res.json({ message: 'Hello World' });
 });
 
